moved style to top directory

--- a/src/01-draw-some-basic-shapes/index.html
+++ b/src/01-draw-some-basic-shapes/index.html
@@ -3,12 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>01. Draw some basic shapes</title>
-  
-  
-  
-      <link rel="stylesheet" href="css/style.css">
-
-  
+  <link rel="stylesheet" href="../_css/style.css">
 </head>
 
 <body>
