--- a/src/03-draw-lines/index.html
+++ b/src/03-draw-lines/index.html
@@ -3,12 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>03. Draw lines</title>
-  
-  
-  
-      <link rel="stylesheet" href="css/style.css">
-
-  
+  <link rel="stylesheet" href="../_css/style.css">
 </head>
 
 <body>
