--- a/src/06-basic-line-chart/index.html
+++ b/src/06-basic-line-chart/index.html
@@ -3,12 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>06. Basic line chart</title>
-  
-  
-  
-      <link rel="stylesheet" href="css/style.css">
-
-  
+  <link rel="stylesheet" href="../_css/style.css">
 </head>
 
 <body>
