--- a/src/09-basic-donut-chart/index.html
+++ b/src/09-basic-donut-chart/index.html
@@ -14,6 +14,7 @@
         <li class="done">Separate out data</li>
         <li class="done">Track end point of each segment (helps with animation later)</li>
         <li class="done">Use path instead of sector function (used in 08 - basic pie chart)</li>
+        <li class="done">Use legend and labels on the chart - alternative is to label around the chart (possibly add this as a configurable in a more advanced chart)</li>
       </ul>
     </div>
     <div id="container">
