--- a/src/04-basic-horizontal-bar-chart/index.html
+++ b/src/04-basic-horizontal-bar-chart/index.html
@@ -21,10 +21,8 @@
     </div>
   </div>
 </div>
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/raphael/2.2.6/raphael.min.js'></script>
-
-    <script src="js/index.js"></script>
-
+  <script src='../_js/jquery.js'></script>
+  <script src='../_js/raphael.js'></script>
+  <script src="js/index.js"></script>
 </body>
 </html>
