flattened directories for each chart

--- a/src/05-basic-vertical-bar-chart/index.html
+++ b/src/05-basic-vertical-bar-chart/index.html
@@ -25,6 +25,6 @@
 </div>
   <script src='../_js/jquery.js'></script>
   <script src='../_js/raphael.js'></script>
-  <script src="js/index.js"></script>
+  <script src="index.js"></script>
 </body>
 </html>
