Extended axis drawing

--- a/src/12-line-chart-double-y-axis/index.html
+++ b/src/12-line-chart-double-y-axis/index.html
@@ -11,7 +11,7 @@
   <div id="info">
     <h1>12. Line chart - double y axis</h1>
     <ul>
-      <li></li>
+      <li>Two sets of data with different ranges</li>
       <li></li>
       <li></li>
       <li></li>
